Sutter Health/src/objects/Contact_Validation_Summary__c.object
<CustomObject>
    <description>PCRM Project Object</description>
    <fields>
        <fullName>Additional_Information__c</fullName>
        <label>Additional Information</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Address_Line_2__c</fullName>
        <label>Address Line 2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Modified__c</fullName>
        <label>Address Modified</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Only_Modified__c</fullName>
        <description>Req 3670 - Address Modification Tracking except Phone and Fax</description>
        <label>Address Only Modified</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Summary__c</fullName>
        <label>Address Summary</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Address_Type__c</fullName>
        <label>Address Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Primary</fullName>
                </value>
                <value>
                    <fullName>Secondary</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Admin_Approval_Status_Email_Sent_On__c</fullName>
        <description>used for admin approval status tracking purpose</description>
        <label>Admin Approval Status Email Sent On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Admin_Approval_Status_Received_On__c</fullName>
        <description>Used to capture the approval status replied date.</description>
        <label>Admin Approval Status Received On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Admin_Assistant_Approval_Status__c</fullName>
        <description>used to track provider admin assistant approval</description>
        <label>Admin Assistant Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Admin_Assistant_Email__c</fullName>
        <label>Delegate Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Admin_Assistant_Phone__c</fullName>
        <label>Delegate Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Admin_Assistant_Title__c</fullName>
        <label>Delegate Title</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Admin_Assistant__c</fullName>
        <label>Delegate Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Age__c</fullName>
        <description>Used to calculate the age of open ticket</description>
        <formula>IF(   AND(ISBLANK( Closed_Date__c ),  NOT(ISBLANK( Assigned_Date__c )) ),   NOW() -  Assigned_Date__c , null)</formula>
        <label>Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Assigned_Date__c</fullName>
        <label>Assigned Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Associated_Case_Closed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>is associated case closed or not</description>
        <label>Associated Case Closed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Associated_Case_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Associated Case Id</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Provider Information Summaries</relationshipLabel>
        <relationshipName>Provider_Information_Summaries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Attn_To__c</fullName>
        <label>Attn To</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Board_Certifications__c</fullName>
        <label>Board Certifications</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Status__c</fullName>
        <formula>TEXT(Associated_Case_Id__r.Status)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Closed_Date__c</fullName>
        <description>Used to capture provider validation closed date based on case.</description>
        <label>Closed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Communication_Preferences_HIM__c</fullName>
        <label>Communication Preferences – HIM</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In Basket Message</fullName>
                </value>
                <value>
                    <fullName>In Basket Letter</fullName>
                </value>
                <value>
                    <fullName>Fax</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Printed Letter (USPS)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Community_Activities__c</fullName>
        <label>Community Activities</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Contact_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact Id</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Provider Information Summaries</relationshipLabel>
        <relationshipName>Summarys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Provider_Information_Summaries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Decline_Fax__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Decline Fax</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Decline_Phone__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Decline Phone</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Deficiency_Provider__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Value in this field is used to populate the &quot;Communication Preference - HIM Deficiency&quot; field.</description>
        <label>Deficiency Provider?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Delegate_Phone_Ext__c</fullName>
        <description>Used to capture the delegate phone extension.</description>
        <label>Delegate Phone Ext</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deliverability_Email_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Deliverability Email Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <label>Department</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Hygiene_Result__c</fullName>
        <label>Email Hygiene Result</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Status_Description__c</fullName>
        <label>Email Status Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Status_Number__c</fullName>
        <label>Email Status Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Fellowship_Programs__c</fullName>
        <label>Fellowship Programs</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Male</fullName>
                </value>
                <value>
                    <fullName>Female</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hospital_Affiliations__c</fullName>
        <label>Hospital Affiliations</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Internship__c</fullName>
        <label>Internship</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsAddressDeactivated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsAddressDeactivated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Additional_Information_Changed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Additional Information Changed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Admin_Assistant_Changed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Admin Assistant Changed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Admin_Assistant_Email_Changed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Admin Assistant Email Changed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Admin_Assistant_Phone_Changed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Admin Assistant Phone Changed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Admin_Assistant_Phone_Ext_Changed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Admin Assistant Phone Ext Changed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Admin_Assistant_Title_Changed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Admin Assistant Title Changed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Board_Certifications_Changed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Board Certifications Changed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Comm_Pref_EHR_Changed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Comm. Pref. EHR Changed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Comm_Pref_HIM_Changed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Comm. Pref. HIM Changed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Community_Activities_Changed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Community Activities Changed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Department_Changed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Department Changed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Email_Changed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is_Email_Changed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Fax_Changed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Fax Changed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Hospital_Affiliations_Changed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Hospital Affiliations Changed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Internship_Changed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Internship Changed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Medical_Affiliations_Changed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Medical Affiliations Changed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Medical_Education_Changed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Medical Education Changed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Mobile_Phone_Changed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Mobile Phone Changed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Online_Services_Changed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Online Services Changed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Personal_Interests_Changed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Personal Interests Changed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Philosophy_of_care_Changed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Philosophy of care Changed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Phone_Changed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Phone Changed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Phone_Mobile_Fax_Changed_Field__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Phone Mobile Fax Changed Field</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Practicing_Physician_Changed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Practicing Physician Changed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Professional_Interests_Changed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Professional Interests Changed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Publications_Changed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Publications Changed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Residency_Changed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Residency Changed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Resigned_From_Sutter_Changed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Resigned From Sutter Changed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Resigned_Provider_refer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Do you Refer Patients?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Retired_Departed_Changed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Retired / Departed Changed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Secure_Address_Line_2_Changed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Secure Address Line 2 Changed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Secure_City_Changed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Secure City Changed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Secure_Floor_Changed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Secure Floor Changed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Secure_Phone_Ext_Changed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Secure Phone Ext Changed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Secure_State_Changed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Secure State Changed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Secure_Street_Address_Changed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Secure Street Address Changed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Secure_Suite_Changed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Secure Suite Changed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Secure_Zip_Code_Changed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Secure Zip Code Changed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Speciality_Changed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Speciality Changed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Spoken_Languages_Changed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Spoken Languages Changed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Website_Address_Changed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Website Address Changed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Verified_Date__c</fullName>
        <label>Last Verified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Medical_Affiliations__c</fullName>
        <label>Medical Affiliations</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Medical_Education__c</fullName>
        <label>Medical Education</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mobile_Phone__c</fullName>
        <label>Mobile Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Name_formula__c</fullName>
        <formula>HYPERLINK(&quot;/&quot;+ Id + &quot;?nooverride=1&quot;, Name)</formula>
        <label>Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Names_Changes_Suggested__c</fullName>
        <label>Names Changes Suggested</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Street_Address__c</fullName>
        <label>New Street Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>No_of_Reminders__c</fullName>
        <defaultValue>0</defaultValue>
        <label>No of Reminders</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_days_left__c</fullName>
        <formula>CASE(
  MONTH( DATEVALUE( Now() ) ),
  9,  (IF(DAY(DATEVALUE( Now() )) &lt; 10,DATE( 2016, 11, 30) - DATEVALUE( Now() ) - 26,IF(DAY(DATEVALUE( Now() )) &lt; 17,DATE( 2016, 11, 30) - DATEVALUE( Now() ) - 24,IF(DAY(DATEVALUE( Now() )) &lt; 24,DATE( 2016, 11, 30) - DATEVALUE( Now() ) - 22,DATE( 2016, 11, 30) - DATEVALUE( Now() ) - 20)))),
  
  10, (IF(DAY(DATEVALUE( Now() )) &lt; 8,DATE( 2016, 11, 30) - DATEVALUE( Now() ) - 18,IF(DAY(DATEVALUE( Now() )) &lt; 15,DATE( 2016, 11, 30) - DATEVALUE( Now() ) - 16,IF(DAY(DATEVALUE( Now() )) &lt; 22,DATE( 2016, 11, 30) - DATEVALUE( Now() ) - 14,IF(DAY(DATEVALUE( Now() )) &lt; 29,DATE( 2016, 11, 30) - DATEVALUE( Now() ) - 12,DATE( 2016, 11, 30) - DATEVALUE( Now() ) - 10))))),
  
  11, (IF(DAY(DATEVALUE( Now() )) &lt; 5,DATE( 2016, 11, 30) - DATEVALUE( Now() ) - 10,IF(DAY(DATEVALUE( Now() )) &lt; 12,DATE( 2016, 11, 30) - DATEVALUE( Now() ) - 8,IF(DAY(DATEVALUE( Now() )) &lt; 19,DATE( 2016, 11, 30) - DATEVALUE( Now() ) - 6,IF(DAY(DATEVALUE( Now() )) &lt; 26,DATE( 2016, 11, 30) - DATEVALUE( Now() ) - 2,DATE( 2016, 11, 30) - DATEVALUE( Now() )))))), 
  
  0
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>No of days left</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ok_to_Text__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ok to Text</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Online_Services__c</fullName>
        <label>Online Services</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PDI_Campaign__c</fullName>
        <description>Used to indicate Campaign flag</description>
        <label>PDI Campaign</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Personal_Interests__c</fullName>
        <label>Personal Interests</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Philosophy_of_Care__c</fullName>
        <label>Philosophy of Care</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Practicing_Physician__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Provider Service Status</description>
        <label>Practicing Physician</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Preferred_Communication_Method__c</fullName>
        <label>Communication Preferences – EHR</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In Basket</fullName>
                </value>
                <value>
                    <fullName>Fax</fullName>
                </value>
                <value>
                    <fullName>Mail</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Printed_City__c</fullName>
        <description>Field to store Printed City data</description>
        <label>Printed City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Printed_Contact_Name__c</fullName>
        <description>Field to contain printed Contact Name</description>
        <label>Printed Contact Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Printed_Floor__c</fullName>
        <description>Field to contain printed floor data</description>
        <label>Printed Floor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Printed_State__c</fullName>
        <label>Printed State</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Printed_Street_Address__c</fullName>
        <description>Field to contain Printed Street Address</description>
        <label>Printed Street Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Printed_Suite__c</fullName>
        <description>Field to contain Printed Suite data</description>
        <label>Printed Suite</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Printed_Zip_Code__c</fullName>
        <description>Field to contain Printed Zip Code</description>
        <label>Printed Zip Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Professional_Ineterests__c</fullName>
        <label>Professional Ineterests</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Profile_Pic__c</fullName>
        <formula>IF(  Contact_Id__c  &lt;&gt; null ,IMAGE(&quot;https://suttercrm--mdr3--c.cs2.content.force.com/servlet/servlet.FileDownload?file=015R0000000Jb1e&quot;, &quot;Green&quot;,110,110),&quot;No Image to display&quot; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Profile Pic</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProviderInfoHistory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Old Provider Summary</label>
        <referenceTo>Contact_Validation_Summary__c</referenceTo>
        <relationshipLabel>Provider Information Summaries</relationshipLabel>
        <relationshipName>Provider_Information_Summaries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Provider_Access_Type__c</fullName>
        <label>Provider Access Type</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Provider_Active_Status__c</fullName>
        <formula>Contact_Id__r.Provider_Active_Status__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Provider Active Status</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Provider_Admin_Emails_Are_Same__c</fullName>
        <description>PDI: True if Provider Email is the same as Delegate Email.</description>
        <formula>IF( Email__c == Admin_Assistant_Email__c , TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>True if Provider Email is the same as Delegate Email.</inlineHelpText>
        <label>Provider Admin Emails Are Same</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Provider_FirstName__c</fullName>
        <formula>Contact_Id__r.FirstName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Provider FirstName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Provider_FullName__c</fullName>
        <formula>UPPER(Provider_FirstName__c +&apos; &apos;+ Provider_MiddleName__c +&apos;, &apos;+ Provider_LastName__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Provider FullName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Provider_ID_F__c</fullName>
        <formula>Contact_Id__r.Provider_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Provider ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Provider_ID__c</fullName>
        <label>Provider ID</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Provider_LastName__c</fullName>
        <formula>Contact_Id__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Provider LastName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Provider_Last_Login_Date__c</fullName>
        <label>Provider Last Login Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Provider_License_Number__c</fullName>
        <formula>Contact_Id__r.Provider_License_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Provider License Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Provider_MiddleName__c</fullName>
        <formula>Contact_Id__r.Contact_Middle_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Provider MiddleName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Provider_NPI_F__c</fullName>
        <formula>Contact_Id__r.Provider_NPI__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Provider NPI</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Provider_Name_Suffix__c</fullName>
        <label>Provider Name Suffix</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Provider_Name__c</fullName>
        <label>Provider Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Provider_Service_Status__c</fullName>
        <description>Provider Service Status field to be visible on Validate Address pop up : REQ 3665</description>
        <label>Provider Service Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Retired</fullName>
                </value>
                <value>
                    <fullName>Resigned</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Provider_Title__c</fullName>
        <label>Provider Title</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Provider_Type__c</fullName>
        <label>Provider Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Internal</fullName>
                </value>
                <value>
                    <fullName>External</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Providers_By_Phone_Number__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>used to store id of the common phone number object.</description>
        <label>Providers By Phone Number</label>
        <referenceTo>ProvidersByPhoneNumber__c</referenceTo>
        <relationshipLabel>Provider Information Summaries</relationshipLabel>
        <relationshipName>Provider_Information_Summaries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Publications__c</fullName>
        <label>Publications</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Residency__c</fullName>
        <label>Residency</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Resigned_From_Sutter__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Inactive Provider</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Resolution_Time_in_Sec__c</fullName>
        <formula>IF(
NOT(ISBLANK( Closed_Date__c )),
( Closed_Date__c  -  Assigned_Date__c )*24*60, NULL
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Resolution Time in Min</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Retired_Departed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Provider Service Status</description>
        <label>Retired / Departed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Secure_City__c</fullName>
        <label>Secure City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secure_Fax__c</fullName>
        <label>Secure Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Secure_Floor__c</fullName>
        <label>Secure Floor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secure_Phone_Ext__c</fullName>
        <label>Secure Phone Ext</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secure_Phone__c</fullName>
        <label>Primary Phone Number</label>
        <type>Phone</type>
    </fields>
</CustomObject>